working on post

--- a/views/index.html
+++ b/views/index.html
@@ -11,11 +11,11 @@
 <body>
   <div class="container">
     <h1>Acme Customers SPA</h1>
-    <form action="/api/customers" method="POST">
+    <!-- <form action="/api/customers" method="POST"> -->
     <!-- <form> -->
       <input type="email" name="email" id="email" />
       <button id="createButton">Create</button>
-    </form>
+    <!-- </form> -->
     <div id="message">
     </div>
     <ul id="customerList">
