remove button working

--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
     <!-- <form action="/api/customers" method="POST"> -->
     <!-- <form> -->
       <input type="email" name="email" id="email" />
-      <button id="createButton">Create</button>
+      <button class="btn btn-outline-success" id="createButton">Create</button>
     <!-- </form> -->
     <div id="message">
     </div>
