--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <h1>Acme Customers SPA</h1>
     <div class="input-group mb-3">
-      <input type="email" class="form-control col-4" placeholder="Customer email" aria-label="Recipient's username" aria-describedby="basic-addon2" name="email" id="email">
+      <input type="email" class="form-control" placeholder="Customer email" aria-label="Recipient's username" aria-describedby="basic-addon2" name="email" id="email">
       <div class="input-group-append">
         <button class="btn btn-success" id="createButton" type="button">Create</button>
       </div>
